libs/@local/hashql/syntax-jexpr/src/parser/array/snapshots/hashql_syntax_jexpr__parser__array__tests__parse_basic_function_call.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/array/mod.rs
description: Parses a basic function call with proper literal syntax
expression: "[\"add\", {\"#literal\": 1}, {\"#literal\": 2}]"
---
Expr#4294967040@8
  ExprKind (Call)
    CallExpr#4294967040@8
      Expr#4294967040@3
        ExprKind (Path)
          Path#4294967040@3 (rooted: false)
            PathSegment#4294967040@2 (name: add)
      Argument#4294967040@5
        Expr#4294967040@5
          ExprKind (Literal)
            LiteralExpr#4294967040@4
              LiteralKind (Integer)
                IntegerLiteral (1)
      Argument#4294967040@7
        Expr#4294967040@7
          ExprKind (Literal)
            LiteralExpr#4294967040@6
              LiteralKind (Integer)
                IntegerLiteral (2)
