libs/@local/hashql/syntax-jexpr/src/parser/array/snapshots/hashql_syntax_jexpr__parser__array__tests__parse_function_call_with_labeled_arguments.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/array/mod.rs
description: Parses a function call with labeled arguments
expression: "[\"greet\", {\":name\": {\"#literal\": \"Alice\"}}, {\":age\": {\"#literal\": 30}}]"
---
Expr#4294967040@14
  ExprKind (Call)
    CallExpr#4294967040@14
      Expr#4294967040@3
        ExprKind (Path)
          Path#4294967040@3 (rooted: false)
            PathSegment#4294967040@2 (name: greet)
      LabeledArgument#4294967040@8 (label: name)
        Argument#4294967040@7
          Expr#4294967040@7
            ExprKind (Literal)
              LiteralExpr#4294967040@6
                LiteralKind (String)
                  StringLiteral#4294967040@6 (Alice)
      LabeledArgument#4294967040@13 (label: age)
        Argument#4294967040@12
          Expr#4294967040@12
            ExprKind (Literal)
              LiteralExpr#4294967040@11
                LiteralKind (Integer)
                  IntegerLiteral#4294967040@11 (30)
