libs/@local/hashql/syntax-jexpr/src/parser/array/snapshots/hashql_syntax_jexpr__parser__array__tests__parse_function_call_with_multiple_labeled_arguments.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/array/mod.rs
description: Multiple labeled arguments cannot exist in a single object
expression: "\n                [\"greet\",\n                    {\":age\": {\"#literal\": 30},\n                     \":gender\": {\"#literal\": \"non-binary\"}\n                    }\n                ]"
---
[31m[parser::array::labeled-argument-length-mismatch] Error:[0m Invalid number of labeled arguments
   ╭─[ <unknown>:3:21 ]
   │
 3 │ ╭─▶                     {":age": {"#literal": 30},
 4 │ │                        ":gender": {"#literal": "non-binary"}
   │ │                        ──────────────────┬──────────────────  
   │ │                                          ╰──────────────────── ... remove this extraneous argument
 5 │ ├─▶                     }
   │ │                           
   │ ╰─────────────────────────── Remove extra arguments
   │     
   │     Help: Labeled arguments must contain exactly one key-value pair, but 2 were provided
   │     
   │     Note: In J-Expr, labeled arguments use the format:
   │           - `["function", {":label": value}]`
   │           - `["function", {":label1": value1}, {":label2": value2}]`
   │           - `["function", ":variable1"]`
   │           
   │           The colon prefix (':') is required to distinguish labeled arguments from positional arguments.
───╯
