libs/@local/hashql/syntax-jexpr/src/parser/array/snapshots/hashql_syntax_jexpr__parser__array__tests__parse_labeled_argument_invalid_identifier.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/array/mod.rs
description: Labeled arguments must have valid identifiers
expression: "[\"func\", {\":123\": {\"#literal\": \"value\"}}]"
---
[31m[parser::array::labeled-argument-invalid-identifier] Error:[0m Invalid identifier in labeled argument
   ╭─[ <unknown>:1:11 ]
   │
 1 │ ["func", {":123": {"#literal": "value"}}]
   │           ───┬──  
   │              ╰──── Invalid labeled argument name
   │ 
   │ Note: Labeled argument identifiers must be valid HashQL identifiers
───╯
