libs/@local/hashql/syntax-jexpr/src/parser/array/snapshots/hashql_syntax_jexpr__parser__array__tests__parse_labeled_argument_missing_prefix.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/array/mod.rs
description: "Labeled arguments must start with ':'"
expression: "[\"greet\", {\"name\": {\"#literal\": \"Alice\"}}]"
---
[31m[parser::object::unknown-key] Error:[0m Parser
   ╭─[ <unknown>:1:12 ]
   │
 1 │ ["greet", {"name": {"#literal": "Alice"}}]
   │            ───┬──  
   │               ╰──── Unrecognized key `name`
   │ 
   │ Help: This J-Expr object only accepts these specific keys: `#literal`, `#struct`, `#dict`, `#tuple`, `#list`, or `#type`
───╯
