libs/@local/hashql/syntax-jexpr/src/parser/array/snapshots/hashql_syntax_jexpr__parser__array__tests__parse_multiline_array.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/array/mod.rs
description: Parses a multiline function call with proper formatting
expression: "[\n            \"let\",\n            {\"#literal\": \"x\"},\n            {\"#literal\": 10},\n            [\"add\", {\"#literal\": \"x\"}, {\"#literal\": 5}]\n            ]"
---
Expr#4294967040@17
  ExprKind (Call)
    CallExpr#4294967040@17
      Expr#4294967040@3
        ExprKind (Path)
          Path#4294967040@3 (rooted: false)
            PathSegment#4294967040@2 (name: let)
      Argument#4294967040@5
        Expr#4294967040@5
          ExprKind (Literal)
            LiteralExpr#4294967040@4
              LiteralKind (String)
                StringLiteral (x)
      Argument#4294967040@7
        Expr#4294967040@7
          ExprKind (Literal)
            LiteralExpr#4294967040@6
              LiteralKind (Integer)
                IntegerLiteral (10)
      Argument#4294967040@16
        Expr#4294967040@16
          ExprKind (Call)
            CallExpr#4294967040@16
              Expr#4294967040@11
                ExprKind (Path)
                  Path#4294967040@11 (rooted: false)
                    PathSegment#4294967040@10 (name: add)
              Argument#4294967040@13
                Expr#4294967040@13
                  ExprKind (Literal)
                    LiteralExpr#4294967040@12
                      LiteralKind (String)
                        StringLiteral (x)
              Argument#4294967040@15
                Expr#4294967040@15
                  ExprKind (Literal)
                    LiteralExpr#4294967040@14
                      LiteralKind (Integer)
                        IntegerLiteral (5)
