libs/@local/hashql/syntax-jexpr/src/parser/array/snapshots/hashql_syntax_jexpr__parser__array__tests__parse_nested_function_calls.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/array/mod.rs
description: Parses nested function calls
expression: "[\"add\", [\"multiply\", {\"#literal\": 2}, {\"#literal\": 3}], {\"#literal\": 5}]"
---
Expr#4294967040@15
  ExprKind (Call)
    CallExpr#4294967040@15
      Expr#4294967040@3
        ExprKind (Path)
          Path#4294967040@3 (rooted: false)
            PathSegment#4294967040@2 (name: add)
      Argument#4294967040@12
        Expr#4294967040@12
          ExprKind (Call)
            CallExpr#4294967040@12
              Expr#4294967040@7
                ExprKind (Path)
                  Path#4294967040@7 (rooted: false)
                    PathSegment#4294967040@6 (name: multiply)
              Argument#4294967040@9
                Expr#4294967040@9
                  ExprKind (Literal)
                    LiteralExpr#4294967040@8
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@8 (2)
              Argument#4294967040@11
                Expr#4294967040@11
                  ExprKind (Literal)
                    LiteralExpr#4294967040@10
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@10 (3)
      Argument#4294967040@14
        Expr#4294967040@14
          ExprKind (Literal)
            LiteralExpr#4294967040@13
              LiteralKind (Integer)
                IntegerLiteral#4294967040@13 (5)
